updating query to get case